# securebase

./: .env.example  .gitignore  Cargo.toml  README.md  compose.yaml  garage.toml  justfile
bins/securebase-acl/: Cargo.toml
bins/securebase-acl/src/: main.rs
bins/securebase-auth/: Cargo.toml
bins/securebase-auth/src/: main.rs
bins/securebase-data/: Cargo.toml
bins/securebase-data/src/: main.rs
bins/securebase-storage/: Cargo.toml
bins/securebase-storage/src/: main.rs
crates/acl-api/: Cargo.toml
crates/acl-api/src/: error.rs  handlers.rs  lib.rs
crates/acl-engine/: Cargo.toml
crates/acl-engine/src/: check.rs  lib.rs  store.rs
crates/acl-model/: Cargo.toml
crates/acl-model/src/: lib.rs  schema.rs  tuple.rs
crates/acl-model/src/schema/: parser.rs  validator.rs
crates/acl-model/test/: schema.fga
crates/acl-store/: Cargo.toml
crates/acl-store/examples/: demo_tuple.rs
crates/acl-store/src/: lib.rs
crates/auth-api/: Cargo.toml
crates/auth-api/src/: lib.rs
crates/auth-core/: Cargo.toml
crates/auth-core/src/: lib.rs
crates/data-api/: Cargo.toml
crates/data-api/src/: lib.rs
crates/securebase-core/: Cargo.toml
crates/securebase-core/src/: lib.rs
crates/securebase-db/: Cargo.toml
crates/securebase-db/src/: lib.rs
crates/securebase-proto/: Cargo.toml
crates/securebase-proto/src/: acl.rs  auth.rs  data.rs  lib.rs  storage.rs
crates/storage-api/: Cargo.toml
crates/storage-api/src/: lib.rs
db-init/: gotrue_init.sh
migrations/acl/: 0001_init.sql  0002_tuples.sql  0003_remove_wildcard_tuples.sql
migrations/app/: 0001_init.sql
migrations/auth/: 0001_init.sql
