[workspace]
resolver = "2"
members = [
    # shared
    "crates/securebase-core",
    "crates/securebase-db",
    "crates/securebase-proto",
    # acl stack
    "crates/acl-model",
    "crates/acl-engine",
    "crates/acl-store",
    "crates/acl-api",
    # services
    "crates/auth-core",
    "crates/auth-api",
    "crates/data-api",
    "crates/storage-api",
    # binaries
    "bins/securebase-acl",
    "bins/securebase-auth",
    "bins/securebase-data",
    "bins/securebase-storage",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
securebase-core  = { path = "crates/securebase-core" }
securebase-db    = { path = "crates/securebase-db" }
securebase-proto = { path = "crates/securebase-proto" }
acl-model        = { path = "crates/acl-model" }
acl-engine       = { path = "crates/acl-engine" }
acl-store        = { path = "crates/acl-store" }
acl-api          = { path = "crates/acl-api" }
auth-core        = { path = "crates/auth-core" }
auth-api         = { path = "crates/auth-api" }
data-api         = { path = "crates/data-api" }
storage-api      = { path = "crates/storage-api" }

sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "migrate", "macros", "uuid", "time"] }

axum               = { version = "0.7", default-features = false, features = ["http1", "json", "tokio", "macros"] }
tower              = "0.5"
tower-http         = { version = "0.6", features = ["trace"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tokio              = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
jsonwebtoken       = "9"
reqwest            = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror          = "1"
anyhow             = "1"