[package]
name = "acl-api"
version = "0.1.0"
edition.workspace = true

[dependencies]
axum             = { workspace = true }
tokio            = { workspace = true }
tower-http       = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
thiserror        = { workspace = true }
anyhow           = { workspace = true }
sqlx             = { workspace = true }
acl-model        = { workspace = true }
acl-engine       = { workspace = true }
acl-store        = { workspace = true }
auth-core        = { workspace = true }
securebase-proto = { workspace = true }
securebase-db    = { workspace = true }
