[package]
name = "auth-api"
version = "0.1.0"
edition.workspace = true

[dependencies]
axum             = { workspace = true }
tokio            = { workspace = true }
reqwest          = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
thiserror        = { workspace = true }
auth-core        = { workspace = true }
securebase-proto = { workspace = true }
anyhow           = { workspace = true }
