[package]
name = "auth-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
securebase-proto = { workspace = true }
axum             = { workspace = true }
jsonwebtoken     = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
thiserror        = { workspace = true }
tower            = { workspace = true }
